--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
+server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/User?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456789
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
